# src/routes/index.ts
@@ -1,5 +1,6 @@
 import { Router } from "express";
 import * as UserController from "../controllers/UserController";
+import * as AuthController from "../controllers/AuthController";
 
 const router = Router();
 
@@ -8,5 +9,8 @@ router.get("/users/:id", UserController.getUserById);
 router.post("/users", UserController.createUser);
 router.put("/users/:id", UserController.updateUser);
 router.delete("/users/:id", UserController.deleteUser);
+
+router.post("/auth/login", AuthController.login);
+router.post("/auth/refresh", AuthController.refresh);
 
 export default router;
